# image-sanitizer

./: CMakeLists.txt  Dockerfile  README.md  start_docker.sh
src/: main.cpp
